# esorm

./: .gitignore  .readthedocs.yaml  README.md  build.sh  make_env.sh  pyproject.toml  pyrightconfig.json  pytest.ini  setup.cfg  tests.sh
.claude/: settings.local.json
.github/: FUNDING.yml
docs/: advanced.md  advanced_usage.rst  changelog.py  conf.py  esorm.rst  index.rst  reference.rst  requirements.txt
docs/_static/css/: custom.css
esorm/: __init__.py  aggs.py  bulk.py  error.py  esorm.py  fastapi.py  fields.py  logger.py  model.py  query.py  response.py  utils.py  watcher.py
tests/: conftest.py  docker-compose.yml  test_esorm.py
