[metadata]
name = esorm
version = 0.1.0
author = "Adam Wallner"
author_email = "adam.wallner@gmail.com"
description = "Python ElasticSearch ORM based on Pydantic"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ElasticSearch, ORM, Pydantic
license = MPL-2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Development Status :: 3 - Beta
    Intended Audience :: Developers
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
packages = find:
install_requires =
    typing-extensions>=4.8.0
    elasticsearch>=8.6.0, <9.0.0
    aiohttp>=3.0.0, <4.0.0
    pydantic>=2.1.0

[options.extras_require]
dev =
    fastapi
# Test
    pytest
    pytest-asyncio
    pytest-spec
    pytest-timeout
# Documentation
    sphinx
    sphinx-rtd-theme == 1.3.0
    sphinx-rtd-dark-mode == 1.3.0
    sphinx-autodoc-typehints
    myst-parser  # Markdown support
