[metadata]
name = pyesorm
version = 0.6.5
author = Adam Wallner
author_email = adam.wallner@gmail.com
description = Python ElasticSearch ORM based on Pydantic
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ElasticSearch, ORM, Pydantic
license = MPL-2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
url = https://github.com/wallneradam/esorm
project_urls =
    Bug Tracker = https://github.com/wallneradam/esorm/issues
    Documentation = https://esorm.readthedocs.io/en/latest/
    Source Code = https://github.com/wallneradam/esorm
    Changelog = https://esorm.readthedocs.io/en/latest/changelog.html

[options]
packages = find:
install_requires =
    typing-extensions>=4.8.0
    elasticsearch>=7.17.12, <9.0.0
    aiohttp>=3.0.0, <4.0.0
    pydantic>=2.1.0

[options.extras_require]
dev =
    fastapi
    # Test
    pytest == 8.0.2
    pytest-asyncio == 0.21.1
    pytest-spec
    pytest-timeout
    # Documentation
    sphinx
    sphinx-rtd-theme == 1.3.0
    sphinx-rtd-dark-mode == 1.3.0
    sphinx-autodoc-typehints
    myst-parser  # Markdown support
    # Distribution
    twine
